# crysok.com

./: .detaignore  .gitignore  Procfile  README.md  Spacefile  deta.json  main.py  pyproject.toml  requirements.txt
.well-known/matrix/: server
app/: __init__.py  babel.cfg  blog.py  cli.py  config.py  content.py  logger.py  routes.py
app/i18n/es/LC_MESSAGES/: messages.mo  messages.po
app/static/: ads.txt  sitemap.xml
app/static/css/: 404.css  blog.css  home.css  links.css  main.css  projects.css
app/static/favicon/: browserconfig.xml  site.webmanifest
app/static/js/: github-callouts.js  main.js  post.js
app/static/posts/: 220710.md
app/templates/: 404.html.j2  base.html.j2  blog.html.j2  cv.html.j2  home.html.j2  links.html.j2  post.html.j2  project_detail.html.j2  projects.html.j2
