[tool.poetry]
name = "crysok.com"
version = "0.9.0"
description = "Personal website"
authors = ["Ezequiel Dzioba <ezequintela@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.2.2"
Flask-Babel = "^2.0.0"
python-dotenv = "^0.20.0"
colorlog = "^6.6.0"
waitress = "^2.1.2"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^5.0.4"
djlint = "^1.9.4"

[tool.poetry.scripts]

[tool.djlint]
profile = "jinja"
ignore = "H006"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
